2023-12-15 Jan Kotanski <jankotan@gmail.com>
	* add support for fetching metadata from multi-scan NeXus files (#90)
	* tagged as 3.18.0

2023-12-13 Jan Kotanski <jankotan@gmail.com>
	* reduce a number of error messages for wrong user data (#86)
	* tagged as 3.17.2

2023-12-12 Jan Kotanski <jankotan@gmail.com>
	* fix typo in in printing error message (#85)
	* tagged as 3.17.1

2023-12-12 Jan Kotanski <jankotan@gmail.com>
	* add support for user data units and other attributes (#85)
	* tagged as 3.17.0

2023-12-12 Jan Kotanski <jankotan@gmail.com>
	* improve support for MetadataScript or FioAdditions (#83)
	* tagged as 3.16.1

2023-12-12 Jan Kotanski <jankotan@gmail.com>
	* add support for MetadataScript or FioAdditions (#80)
	* tagged as 3.16.0

2023-08-30 Jan Kotanski <jankotan@gmail.com>
	* set the timers variable with availableTimers (#77)
	* tagged as 3.15.0

2023-07-07 Jan Kotanski <jankotan@gmail.com>
	* check if parent obj of datasource is a field (#74)
	* tagged as 3.14.0

2023-07-06 Jan Kotanski <jankotan@gmail.com>
	* fix serialno for sardana >= 3.4.0 (#68)
	* tagged as 3.13.2

2023-07-03 Jan Kotanski <jankotan@gmail.com>
	* fix serialno for sardana >= 3.4.0 (#68)
	* tagged as 3.13.1

2023-05-17 Jan Kotanski <jankotan@gmail.com>
	* add support for .nxs.tmp or .h5.tmp files (#64)
	* tagged as 3.13.0

2022-11-09 Jan Kotanski <jankotan@gmail.com>
	* add SciCatDatasetListFileLocal flag which sets the hostname in scicat-datasets list filename  (#61)
	* tagged as 3.12.0

2022-10-26 Jan Kotanski <jankotan@gmail.com>
	* set the hostname via NXSAppendSciCatDataset to changes scicat-datasets list filename (#54)
	* tagged as 3.11.0

2022-10-21 Jan Kotanski <jankotan@gmail.com>
	* set nexus_step_datasources order depending on moveables (#50)
	* tagged as 3.10.1

2022-10-20 Jan Kotanski <jankotan@gmail.com>
	* add nexus_step_datasources and nexus_init_datasources variables (#47)
	* tagged as 3.10.0

2022-10-19 Jan Kotanski <jankotan@gmail.com>